# Loandra

./: CMakeLists.txt  Main.cc  Makefile  MaxSAT.cc  ParserPB.cc  ParserPB.h
maxpre2/: CMakeLists.txt
maxpre2/src/: cpreprocessorinterface.cpp  preprocessor.cpp
maxpre2/src/satlike/: Alg_SATLike.h
maxpre2/src/satsolver/: glucose3.cpp
maxpre2/src/satsolver/solvers/glucose3/utils/: System.h
solvers/glucose4.1/: CMakeLists.txt
solvers/glucose4.1/core/: Solver.cc
solvers/glucose4.1/utils/: System.h
zlib/: minigzip.c
